# fastcountvectorizer

./: .gitignore  .readthedocs.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  asv.conf.json  setup.cfg  setup.py  tox.ini
.github/workflows/: build_wheels.sh  ci.yml
benchmarks/: bench.py
docs/: conf.py  countvectorizer_api.rst  fastcountvectorizer_api.rst  index.rst  public_api.rst  requirements.txt
fastcountvectorizer/: CMakeLists.txt  __init__.py  _analyzers.cpp  _analyzers.h  _bindings.cpp  _collections.cpp  _collections.h  _counters.cpp  _counters.h  _csr.h  _ext.cpp  _ext.h  _sputils.cpp  _sputils.h  _stopwords.py  _strings.cpp  _strings.h  benchmark.py  buzhash.h  compat.py  fastcountvectorizer.py
fastcountvectorizer/tests/: CMakeLists.txt  pyutils.cpp  pyutils.h  test__analyzers_impl.cpp  test__collections_impl.cpp  test__counters_impl.cpp  test__ext_impl.cpp  test__sputils_impl.cpp  test__strings_impl.cpp  test_fastcountvectorizer.py  test_sklearn.py  test_utils.h
